# sp_ask_admin_dashboard

./: .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  env-exemple  pyproject.toml  pytest.ini  requirements.txt  start-server.sh
dashboard/: models.py
dashboard/migrations/: 0001_initial.py  0002_auto_20210607_2032.py  0003_auto_20210607_2034.py
dashboard/templates/: chord_diagram.html  homepage.html
dashboard/templates/base/: leftsidebar.html
dashboard/templates/pivot/: chats_per_school.html
dashboard/templates/results/: chats.html  faq.html  profile.html  search_between_date.html
dashboard/templates/transcript/: transcript.html
dashboard/templatetags/: search_helper.py
dashboard/tests/: test_models.py  test_views.py  tests_models.py
dashboard/utils/: ask_schools.py  assignments.py  chord_diagram.py  daily_report.py  utils.py
dashboard/views/: views_api.py  views_assignee.py  views_homepage.py  views_profiles_and_faqs.py  views_report.py  views_search.py  views_transcript.py
docs/: conf.py
lh3/: api.py  utils.py
project_config/: settings.py  urls.py
static/: mps.json  transcripts.xlsx
